use shared subtitle class for project articles + headers, news headers, people titles; add categoryTitle option for secondary header and populate with news category

--- a/templates/news/_entry.html
+++ b/templates/news/_entry.html
@@ -27,6 +27,7 @@
 
     {% include 'partials/_secondary-header'
       with {
+        'categoryTitle': impactType,
         'headerImage': headerImage,
         'headerTitle': entry.title,
       }
