--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -39,7 +39,7 @@
       <div class="row-block -right">
         <div class="text-module background-{{ (headerColor ?? null) ? headerColor|lower : 'black' }} text-white font-smoothing">
           <h1 class="font-h2 no-margin">{{ headerTitle }}</h1>
-          {% if headerSubtitle ?? false %}<h2 class="font-details no-margin">{{ headerSubtitle }}</h2>{% endif %}
+          {% if headerSubtitle ?? false %}<h2 class="font-details subtitle">{{ headerSubtitle }}</h2>{% endif %}
         </div>
       </div>
       <div class="row-block">
