--- a/templates/projects/_article.html
+++ b/templates/projects/_article.html
@@ -17,7 +17,7 @@
     {% endif %}
   </div>
   <div class="project-title background-{{ projectColor }}">
-    <h2 class="font-p"><a href="{{ project.getUrl }}">{{ project.projectClientName }}</a></h2>
-    <h3 class="font-captions">{{ project.projectName }}</h3>
+    <h2 class="font-p no-margin"><a href="{{ project.getUrl }}">{{ project.projectClientName }}</a></h2>
+    <h3 class="font-captions subtitle">{{ project.projectName }}</h3>
   </div>
 </article>
