--- a/templates/partials/_secondary-header.html
+++ b/templates/partials/_secondary-header.html
@@ -1,4 +1,4 @@
-{# header #}
+{# secondary header #}
 <div class="hero-wrap">
   <div class="hero-image image-wrap">
     {% if headerImage %}
@@ -11,8 +11,9 @@
   <div class="row -halves">
     <div class="row-block -right">
       <div class="module text-module background-{{ (headerColor ?? null) ? headerColor|lower : 'black' }} text-white font-smoothing">
-        <h1 class="font-h2 no-margin">{{ headerTitle }}</h1>
-        {% if headerSubtitle ?? false %}<h2 class="font-details no-margin">{{ headerSubtitle }}</h2>{% endif %}
+        {% if categoryTitle ?? false %}<div class="category font-details">{{ categoryTitle }}</div>{% endif %}
+        <h1 class="font-h2 {{ (categoryTitle ?? false) ? 'subtitle' : 'no-margin' }}">{{ headerTitle }}</h1>
+        {% if headerSubtitle ?? false %}<h2 class="font-details subtitle">{{ headerSubtitle }}</h2>{% endif %}
       </div>
     </div>
   </div>
