--- a/templates/partials/_theater-header.html
+++ b/templates/partials/_theater-header.html
@@ -15,9 +15,18 @@
         <div class="user-content">
           <p class="font-h1">{{ pageHeader.subheader }}</p>
         </div>
+        {% if entry is defined and entry.slug == 'careers' %}
+          <div class="buttons">
+            <a rel="noopener" target="_blank" href="https://domestic-aeieng.icims.com/" class="button">
+              <span class="border"></span><span class="extra-corners"></span>
+              Search Jobs
+              <svg class="icon icon-right-arrow"><use xlink:href="#icon-right-arrow" /></svg>
+            </a>
+          </div>
+        {% endif %}
         {% if pageHeader.headerVideo %}
-        <div class="buttons {% if entry is defined %}{{ entry.slug == 'approach' or entry.slug == 'careers' ? '' : 'theater-play-button-only' }}{% endif %}">
-            <button class="button -solid theater-play text-white background-red">Play Video<svg class="icon icon-triangle"><use xlink:href="#icon-triangle" /></svg></button>
+        <div class="buttons">
+          <button class="button -solid theater-play text-white background-red">Play Video<svg class="icon icon-triangle"><use xlink:href="#icon-triangle" /></svg></button>
         </div>
         {% endif %}
       </div>
