remove office stats again

--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -75,8 +75,8 @@
       {% set block = {
         statFigure: entry.numberOfPeople,
         statLabel: 'People',
-        statFigure2: entry.numberOfOffices,
-        statLabel2: 'Offices',
+        statFigure2: '',
+        statLabel2: '',
       } %}
       {% include 'partials/media-blocks/_stat' %}
     </div>
