switch from isotope to masonry as we're not using filtering, fix projects infinite scroll by setting height of parent container, cache $masonryGrid, no underlines on service index links

--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -50,8 +50,13 @@
   }
 }
 
+// Hide pagination (infinite scroll is used)
 .pagination {
   display: none;
+}
+// Make sure infinite scroll container is full height
+.infinite-scroll-container {
+  height: 100%;
 }
 
 .page-home, .page-expertise, .page-approach, .page-careers, .page-people.white-header {
