--- a/templates/services/_article.html
+++ b/templates/services/_article.html
@@ -9,6 +9,6 @@
     {% endif %}
   </div>
   <div class="text pad">
-    <h2 class="name font-p no-margin"><a href="{{ service.getUrl() }}">{{ service.title }}</a></h2>
+    <h2 class="name font-p no-margin no-underline"><a href="{{ service.getUrl() }}">{{ service.title }}</a></h2>
   </div>
 </article>
