do statfigure substitutions after checking for length

--- a/templates/partials/media-blocks/_stat.html
+++ b/templates/partials/media-blocks/_stat.html
@@ -1,20 +1,17 @@
 {% set substitutions = {
   '%': '<span class="percent">%</span>'
 } %}
-{% set statFigure = block.statFigure|escape|replace(substitutions) %}
-{% set statFigure2 = block.statFigure2|escape|replace(substitutions) %}
 
 {% if block.statFigure2 %}
-
 
   <div class="module stat-module stat-two-figure">
     <div class="stat-wrap">
       <dl class="figure">
-        <dt{{ statFigure|length > 8 ? ' class="-verbose"' : '' }}>{{ statFigure|raw }}</dt>
+        <dt{{ block.statFigure|length > 8 ? ' class="-verbose"' : '' }}>{{ block.statFigure|escape|replace(substitutions)|raw }}</dt>
         <dd>{{ block.statLabel }}</dd>
       </dl>
       <dl class="figure">
-        <dt{{ statFigure2|length > 8 ? ' class="-verbose"' : '' }}>{{ statFigure2|raw }}</dt>
+        <dt{{ block.statFigure2|length > 8 ? ' class="-verbose"' : '' }}>{{ block.statFigure2|escape|replace(substitutions)|raw }}</dt>
         <dd>{{ block.statLabel2 }}</dd>
       </dl>
     </div>
@@ -25,7 +22,7 @@
   <div class="module stat-module stat-one-figure">
     <div class="stat-wrap">
       <dl class="figure">
-        <dt{{ statFigure|length > 8 ? ' class="-verbose"' : '' }}>{{ statFigure|raw }}</dt>
+        <dt{{ block.statFigure|length > 8 ? ' class="-verbose"' : '' }}>{{ block.statFigure|escape|replace(substitutions)|raw }}</dt>
         <dd>{{ block.statLabel }}</dd>
       </dl>
     </div>
