--- a/templates/partials/_related-projects.html
+++ b/templates/partials/_related-projects.html
@@ -1,5 +1,5 @@
 {% if relatedProjects|length %}
-  <section id="related-projects" class="margin-vertical related-posts">
+  <section id="related-projects" class="related-posts">
     <div class="row -single margin-top">
       <div class="row-block">
         <div class="module text-module ">
