padding bottom for slick quote carousels

--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -212,7 +212,9 @@
 
 .quote-carousel {
   position: relative;
-  // padding-bottom: $padding*2;
+  &.slick-initialized {
+    padding-bottom: $padding*2;
+  }
 
   .next, .prev {
       bottom: 0;
