--- a/web/assets/scss/components/_images.scss
+++ b/web/assets/scss/components/_images.scss
@@ -7,8 +7,8 @@
   video {
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: auto;
     position: absolute;
     transform: translate(-50%, -50%);
   }
