--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -14,9 +14,7 @@
 {% block content %}
 {% set bodyClass = 'single' %}
 
-  {% for pageHeader in entry.pageHeader.all() %}
-    {% include '/partials/_theater-header' %}
-  {% endfor %}
+  {% include 'partials/_stat-header' %}
 
   <section id="services">
     {# services -quarters #}
