--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -7,7 +7,7 @@
         </div>
       </div>
     </div>
-    <ul class="row -halves -separators semantic-only-list hr-top-concrete-light hr-bottom-concrete-light">
+    <ul class="row -halves semantic-only-list">
       {% for post in relatedPosts %}
         <li class="row-block separate">
           {% include 'news/_article' %}
