add zoom-hover to news articles, use force-aspect for specifying when modules like stats fill aspect-ratio

--- a/templates/news/_article.html
+++ b/templates/news/_article.html
@@ -1,6 +1,6 @@
 {% set impactImage = post.impactImage[0] ?? null %}
 
-<article class="module post-module no-underline bigclicky" data-id="{{ post.id }}">
+<article class="module post-module no-underline bigclicky zoom-hover" data-id="{{ post.id }}">
   {# <div class="view-project">View Project <svg class="icon icon-right-arrow" aria-hidden="true" role="presentation"><use xlink:href="#icon-right-arrow"/></svg></div> #}
   <div class="image-wrap -landscape">
     {% if impactImage %}
